--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!--inicio header-->
    <header>
      <nav class="navbar">
-       <a href="index.html"><img class="navbarLogo" src="assets/logo.png" alt="Logo del sitio web"></a>
+       <a href="index.html"><img class="navbarLogo" src="assets/logo.png"Logo del sitio web"></a>
        <ul class="navbarNav">
          <li><a href="index.html">Home</a></li>
          <li><a href="pages/contacto.html">Contacto</a></li>
