--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,20 +9,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 <body>
-   <!--inicio header-->
-   <header>
-    <nav class="navbar">
-      <a href="../index.html"><img class="navbarLogo" src="../assets/logo.png" alt="Logo del sitio web"></a>
-      <ul class="navbarNav">
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-        <li><a href="galeria.html">Galería</a></li>
-        <li><a href="servicios.html">Servicios</a></li>
-        <li><a href="sobreMi.html">Sobre mi</a></li>
-      </ul>
-    </nav>
-  </header>
-  <!--fin header-->
+  <!--inicio header-->
+  <header>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand" href="../index.html"><img width="60" height="auto" src="../assets/logo.png" alt="Logo sitio"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="../index.html">Home<span class="sr-only">(current)</span></a>
+				 	</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../pages/sobreMi.html">Sobre mi</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../pages/servicios.html">Servicios</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../pages/galeria.html">Galería</a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="#">Contacto</a>
+				  	</li>
+				</ul>
+			  </div>
+		</nav>
+	</header>
+   <!--fin header-->
 
     <!--inicio main-->
     <main>
@@ -74,15 +89,29 @@
     <!--Fin main-->
 
    <!--inicio footer-->
- <footer class="footer">
-  <div>
-  <h2>Redes Sociales</h2>
- </div>
- <div class="socialMedia">
-   <a href="https://www.tiktok.com/@miluiatrinomakeup?lang=es"><i class="fab fa-tiktok"></i></a>
-   <a href="https://www.instagram.com/miluiatrino.makeup/"> <i class="fab fa-instagram"></i></a>
- </div>
-</footer>
+   <footer >
+    <div class="contenedorFooter anchoContenido">
+			<h3>Seguime en mis redes</h3>
+			<ul class="redesFooter">
+				<li>
+					<a href="https://www.facebook.com/MiluBeautyMakeUp" target="_blank" rel="noopener noreferrer">
+						<img src="../assets/fb-logo.png" alt="logo facebook">
+					</a>
+				</li>
+				<li>
+					<a href="https://www.instagram.com/miluiatrino.makeup" target="_blank" rel="noopener noreferrer">
+						<img src="../assets/ig-logo.png" alt="logo instagram">
+					</a>
+				</li>
+				<li>
+					<a href="https://www.tiktok.com/@miluiatrinomakeup?lang=es" target="_blank" rel="noopener noreferrer">
+						<img src="../assets/tiktok-logo.png" alt="logo tik-tok">
+					</a>
+				</li>
+			</ul>
+			<h4>Matias iatrino 2021 © Todos los derechos reservados</h4>
+		</div>
+   </footer>
 <!--fin footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/57f7912638.js" crossorigin="anonymous"></script> 
