--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -8,74 +8,65 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-  <!--inicio header-->
-  <header>
-    <nav class="navbar">
-      <a href="../index.html"><img class="navbarLogo" src="../assets/logo.png" alt="Logo del sitio web"></a>
-      <ul class="navbarNav">
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-        <li><a href="galeria.html">Galería</a></li>
-        <li><a href="servicios.html">Servicios</a></li>
-        <li><a href="sobreMi.html">Sobre mi</a></li>
+ <!--inicio header-->
+ <header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="../index.html"><img width="60" height="auto" src="../assets/logo.png" alt="Logo Sitio"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Home<span class="sr-only">(current)</span></a>
+         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/sobreMi.html">Sobre mi</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/servicios.html">Servicios</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Galería</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+          </li>
       </ul>
-    </nav>
-  </header>
-<!--fin header-->
+      </div>
+  </nav>
+</header>
+ <!--fin header-->
    <!--inicio main-->
    <main>
-     <!--
-    <section class="contenedorMaquillaje">
-    <div class="imagenMaquillaje">
-      <img src="../assets/maquillaje1.jpg" alt="imagen maquillaje 1">
-    </div>
-    <div class="imagenMaquillaje">
-      <img src="../assets/maquillaje2.jpg" alt="imagen maquillaje 2">
-    </div>
-    <div class="imagenMaquillaje">
-      <img src="../assets/maquillaje3.jpg" alt="imagen maquillaje 3">
-    </div>
-</section>
--->
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../assets/maquillaje1.jpg" class="d-block w-100" alt="primera imagen">
-    </div>
-    <div class="carousel-item">
-      <img src="../assets/maquillaje2.jpg" class="d-block w-100" alt="segunda imagen">
-    </div>
-    <div class="carousel-item">
-      <img src="../assets/maquillaje3.jpg" class="d-block w-100" alt="tercera imagen">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+
 </main>
 <!--Fin main-->
 
  <!--inicio footer-->
- <footer class="footer">
-  <div>
-  <h2>Redes Sociales</h2>
- </div>
- <div class="socialMedia">
-   <a href="https://www.tiktok.com/@miluiatrinomakeup?lang=es"><i class="fab fa-tiktok"></i></a>
-   <a href="https://www.instagram.com/miluiatrino.makeup/"> <i class="fab fa-instagram"></i></a>
- </div>
-</footer>
+ <footer >
+  <div class="contenedorFooter anchoContenido">
+    <h3>Seguime en mis redes</h3>
+    <ul class="redesFooter">
+      <li>
+        <a href="https://www.facebook.com/MiluBeautyMakeUp" target="_blank" rel="noopener noreferrer">
+          <img src="../assets/fb-logo.png" alt="logo facebook">
+        </a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/miluiatrino.makeup" target="_blank" rel="noopener noreferrer">
+          <img src="../assets/ig-logo.png" alt="logo instagram">
+        </a>
+      </li>
+      <li>
+        <a href="https://www.tiktok.com/@miluiatrinomakeup?lang=es" target="_blank" rel="noopener noreferrer">
+          <img src="../assets/tiktok-logo.png" alt="logo tik-tok">
+        </a>
+      </li>
+    </ul>
+    <h4>Matias iatrino 2021 © Todos los derechos reservados</h4>
+  </div>
+ </footer>
 <!--fin footer-->
 
 <script src="https://kit.fontawesome.com/57f7912638.js" crossorigin="anonymous"></script> 
