Cuarto commit en donde se restructuro el proyecto agregando archivos de imagenes, modificando las paginas

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -1,74 +1,148 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en"> <!--Inicia el HTML-->
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="keywords"  content="MAQUILLAJE, MAKE-UP, MAQUILLADORA, BELLEZA, MUA, MAQUILLAJE SOCIAL, MAQUILLAJE PROFESIONAL, MAQUILLAJE ARTÍSTICO">
+    <meta name="description" content="Sitio Web sobre maquillaje, en donde encontraras maquillaje social, artístico y profesional">
+      <!--favicon-->
+      <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicono/favicon-32x32.png">
+  
+  <!-- Font Awesome icons (free version)-->
+  <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+  <!-- Google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+
+  <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+
+
+  <!-- Core theme CSS (includes Bootstrap)-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> 
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script><!-- link navbar scroll fondo negro-->
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="../css/estilo.css">
+        
+
+  <title>GALERIA</title>
+
 </head>
-<body>
- <!--inicio header-->
- <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="../index.html"><img width="60" height="auto" src="../assets/logo.png" alt="Logo Sitio"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="../index.html">Home<span class="sr-only">(current)</span></a>
-         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../pages/sobreMi.html">Sobre mi</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../pages/servicios.html">Servicios</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Galería</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-          </li>
-      </ul>
-      </div>
-  </nav>
-</header>
- <!--fin header-->
-   <!--inicio main-->
-   <main>
 
-</main>
-<!--Fin main-->
 
- <!--inicio footer-->
- <footer >
-  <div class="contenedorFooter anchoContenido">
-    <h3>Seguime en mis redes</h3>
-    <ul class="redesFooter">
-      <li>
-        <a href="https://www.facebook.com/MiluBeautyMakeUp" target="_blank" rel="noopener noreferrer">
-          <img src="../assets/fb-logo.png" alt="logo facebook">
-        </a>
-      </li>
-      <li>
-        <a href="https://www.instagram.com/miluiatrino.makeup" target="_blank" rel="noopener noreferrer">
-          <img src="../assets/ig-logo.png" alt="logo instagram">
-        </a>
-      </li>
-      <li>
-        <a href="https://www.tiktok.com/@miluiatrinomakeup?lang=es" target="_blank" rel="noopener noreferrer">
-          <img src="../assets/tiktok-logo.png" alt="logo tik-tok">
-        </a>
-      </li>
-    </ul>
-    <h4>Matias iatrino 2021 © Todos los derechos reservados</h4>
-  </div>
- </footer>
-<!--fin footer-->
+    	
+    <body> <!--Aca inicia el body-->
 
-<script src="https://kit.fontawesome.com/57f7912638.js" crossorigin="anonymous"></script> 
-</body>
-</html>
+    	       <!--comienza navbar-->
+                <nav id="menu" class="navbar navbar-expand-lg navbar-dark fixed-top">
+                    <a class="navbar-brand" href="#"></a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+                        <span class="navbar-toggler-icon"></span>
+                        </button>
+
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav m-auto">
+                                     <li class="nav-item translate">
+                                        <a class="nav-link js-scroll-trigger" href="../index.html">HOME</a>
+                                     </li>
+                                     <li class="nav-item translate">
+                                        <a class="nav-link" href="../pages/sobreMi.html">SOBRE MI</a>
+                                     </li>
+                                     <li class="nav-item translate">
+                                        <a class="nav-link" href="../pages/servicios.html">SERVICIOS</a>
+                                     </li>
+                                     <li class="nav-item translate">
+                                        <a class="nav-link" href="../pages/galeria.html">GALERIA</a>
+                                     </li>
+                                     <li class="nav-item translate">
+                                        <a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
+                                     </li>
+                            </ul>
+                        </div>
+                </nav>
+
+                <!--termina navbar-->
+
+                <!-- comienza header-->
+                <header class="header__contacto__fondo headerPages">
+                    <div class="container">
+                        <div class="headerPages__subtitulo">BIENVINID@ A MI ESPACIO</div>
+                        <div class="headerPages__titulo text-uppercase">MILU MAKEUP</div>
+                    </div>
+                </header>
+
+                <!-- termina header-->
+				<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+				<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"crossorigin="anonymous"></script>
+				<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+                    <main>
+                       <div>
+                            <h1 class="section-heading text-center titulosPrincipales">TE MUESTRO ALGUNOS DE MIS MAQUILLAJES!</h1>
+                            <div class="gallery-container">
+                                <div class="gallery-item">
+                                    <img src="../assets/imagenes/galeria/1.jpg" alt="galeria 1" class="gallery__img">
+                                </div>
+                                <div class="gallery-item">
+                                    <img src="../assets/imagenes/galeria/2.jpg" alt="galeria 2" class="gallery__img">
+                                </div><div class="gallery-item">
+                                    <img src="../assets/imagenes/galeria/3.jpg" alt="galeria 3" class="gallery__img">
+                                </div><div class="gallery-item">
+                                    <img src="../assets/imagenes/galeria/4.jpg" alt="galeria 4" class="gallery__img">
+                                </div><div class="gallery-item">
+                                    <img src="../assets/imagenes/galeria/5.jpg" alt="galeria 5" class="gallery__img">
+                                </div><div class="gallery-item">
+                                    <img src="../assets/imagenes/galeria/6.jpg" alt="galeria 6" class="gallery__img">
+                                </div><div class="gallery-item">
+                                    <img src="../assets/imagenes/galeria/7.jpg" alt="galeria 7" class="gallery__img">
+                                </div><div class="gallery-item">
+                                    <img src="../assets/imagenes/galeria/8.jpg" alt="galeria 8" class="gallery__img">
+                                </div><div class="gallery-item">
+                                    <img src="../assets/imagenes/galeria/9.jpg" alt="galeria 9" class="gallery__img">
+                                </div>
+                            </div>
+
+                       </div>                 
+                    </main>
+            <!-- footer -->
+           <footer class="footer py-4">
+            <div class="footer__contacto">SEGUIME EN LAS REDES SOCIALES!</div>
+
+             <!-- redes sociales -->
+                <div class="container">
+                    <div>
+                        <div class="footer__sociales">
+                            <a href="https://www.facebook.com/MiluBeautyMakeUp" class="facebook"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.instagram.com/miluiatrino.makeup" class="instagram"><i class="fab fa-instagram"></i></a>
+                        </div>
+                    </div>
+                </div>
+            <div class="footer__derechos">© 2021 Copyright:
+                <a href="">Mati iatrino</a>
+            </div>
+
+           </footer>
+        <!-- termina el footer-->
+   
+				 <!-- scripts -->
+				<script>
+						$(window).scroll(function() {
+					if ($("#menu").offset().top > 180) {
+						$("#menu").addClass("bg-inverse");
+					  } else {
+					   $("#menu").removeClass("bg-inverse");
+					  }
+					});
+				</script>
+	
+				<script  src = " https://unpkg.com/aos@next/dist/aos.js " ></script> 
+	
+				<script> 
+					AOS . init ( ) ; 
+				</script> 
+	</body>	<!--Aca termina el body-->	
+</html>			
