Se agrega lo pedido para la primera entrega del proyecto Final, la funcionalidad de JS en el archivo funcionalidad.js

--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
         <script src="assets/mail/contact_me.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-
+        <!--Funcionalidad de JS-->
+        <script src="js/funcionalidad.js"></script>
         <script>
                 $(document).ready(function(){
                   $(".nav-tabs a").click(function(){
