Se realizan unos cambios

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -120,21 +120,21 @@
                             <div class="form-row">
 
                                 <div class="col">
-                                    <input type="text" class="form-control" placeholder="Nombre">
+                                    <input type="text" class="form-control" placeholder="Nombre" required>
                                 </div>
                                 <div class="col">
-                                    <input type="text" class="form-control" placeholder="Apellido">
+                                    <input type="text" class="form-control" placeholder="Apellido" required>
                                 </div>
 
                             </div>
                             <br>
 
                             <div class="form-group">
-                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email">
+                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email" required>
                             </div>
 
                             <div class="form-group">
-                                <select class="custom-select">
+                                <select class="custom-select" required>
                                     <option selected>Tipo de maquillaje</option>
                                     <option value="1">SOCIAL</option>
                                     <option value="2">PROFESIONAL</option>
